[gd_scene load_steps=3 format=3 uid="uid://b4ncmhlc70swn"]

[ext_resource type="Script" path="res://scripts/board/board.gd" id="1_p0s2s"]
[ext_resource type="PackedScene" uid="uid://dc5s5wkijgcif" path="res://scenes/board/board_space.tscn" id="2_eqnhx"]

[node name="MainBoard" type="Node2D"]
script = ExtResource("1_p0s2s")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.188235, 0.352941, 0.188235, 1)

[node name="Spaces" type="Node2D" parent="."]

[node name="StartSpace" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(200, 500)
space_id = 0
space_type = 5
next_space_ids = Array[int]([1])

[node name="Space1" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(300, 500)
space_id = 1
next_space_ids = Array[int]([2])

[node name="Space2" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(400, 500)
space_id = 2
next_space_ids = Array[int]([3])

[node name="Space3" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(500, 500)
space_id = 3
space_type = 1
next_space_ids = Array[int]([4])

[node name="Space4" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(600, 500)
space_id = 4
next_space_ids = Array[int]([5])

[node name="Space5" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(700, 500)
space_id = 5
space_type = 2
next_space_ids = Array[int]([6])

[node name="Space6" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(800, 500)
space_id = 6
next_space_ids = Array[int]([7])

[node name="Space7" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(900, 500)
space_id = 7
space_type = 4
next_space_ids = Array[int]([8])

[node name="Space8" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(900, 400)
space_id = 8
next_space_ids = Array[int]([9])

[node name="Space9" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(900, 300)
space_id = 9
space_type = 1
next_space_ids = Array[int]([10])

[node name="Space10" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(800, 300)
space_id = 10
next_space_ids = Array[int]([11])

[node name="Space11" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(700, 300)
space_id = 11
space_type = 3
next_space_ids = Array[int]([12])

[node name="Space12" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(600, 300)
space_id = 12
next_space_ids = Array[int]([13])

[node name="Space13" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(500, 300)
space_id = 13
space_type = 1
next_space_ids = Array[int]([14])

[node name="Space14" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(400, 300)
space_id = 14
next_space_ids = Array[int]([15])

[node name="Space15" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(300, 300)
space_id = 15
space_type = 2
next_space_ids = Array[int]([16])

[node name="Space16" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(200, 300)
space_id = 16
next_space_ids = Array[int]([17])

[node name="Space17" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(200, 200)
space_id = 17
space_type = 1
next_space_ids = Array[int]([18])

[node name="Space18" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(300, 200)
space_id = 18
next_space_ids = Array[int]([19])

[node name="Space19" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(400, 200)
space_id = 19
space_type = 3
next_space_ids = Array[int]([20])

[node name="Space20" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(500, 200)
space_id = 20
next_space_ids = Array[int]([21])

[node name="Space21" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(600, 200)
space_id = 21
space_type = 1
next_space_ids = Array[int]([22])

[node name="Space22" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(700, 200)
space_id = 22
next_space_ids = Array[int]([23])

[node name="Space23" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(800, 200)
space_id = 23
space_type = 2
next_space_ids = Array[int]([24])

[node name="Space24" parent="Spaces" instance=ExtResource("2_eqnhx")]
position = Vector2(900, 200)
space_id = 24
next_space_ids = Array[int]([0])

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopPanel" type="PanelContainer" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TopPanel"]
layout_mode = 2

[node name="TurnLabel" type="Label" parent="UI/TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Turn: 1/10"

[node name="CurrentPlayerLabel" type="Label" parent="UI/TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Current Player: Player 1"
horizontal_alignment = 1

[node name="PlayerStatsContainer" type="HBoxContainer" parent="UI/TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="CoinsLabel" type="Label" parent="UI/TopPanel/HBoxContainer/PlayerStatsContainer"]
layout_mode = 2
text = "Coins: 0"

[node name="VSeparator" type="VSeparator" parent="UI/TopPanel/HBoxContainer/PlayerStatsContainer"]
layout_mode = 2

[node name="StarsLabel" type="Label" parent="UI/TopPanel/HBoxContainer/PlayerStatsContainer"]
layout_mode = 2
text = "Stars: 0"

[node name="BottomPanel" type="PanelContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/BottomPanel"]
layout_mode = 2
alignment = 1

[node name="RollDiceButton" type="Button" parent="UI/BottomPanel/HBoxContainer"]
layout_mode = 2
text = "Roll Dice"

[node name="DiceValueLabel" type="Label" parent="UI/BottomPanel/HBoxContainer"]
layout_mode = 2
text = "Dice: -"

[node name="DicePanel" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DicePanel"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UI/DicePanel/VBoxContainer"]
layout_mode = 2
text = "Rolling Dice..."
horizontal_alignment = 1

[node name="DiceValueLarge" type="Label" parent="UI/DicePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "6"
horizontal_alignment = 1 